--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,12 @@ button:hover {
     background-color: #555;
 }
 
+.infoBox {
+    display: inline-block;
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+}
 
 /* ABOUT SECTION */
 
